# PicoRC2

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  serial_monitor.sh  todo.txt
PicoRC/PicoRC/: BluetoothLogModel.swift  ContentView.swift
PicoRC/PicoRC.xcodeproj/: project.pbxproj
PicoRC/PicoRC.xcodeproj/project.xcworkspace/xcuserdata/dev.xcuserdatad/: UserInterfaceState.xcuserstate
PicoRC/PicoRC.xcodeproj/xcuserdata/dev.xcuserdatad/xcschemes/: xcschememanagement.plist
app/: README.md
app/PicoRC/: BluetoothStreamModel.swift  ContentView.swift  PicoRCApp.swift  Theme.swift
app/PicoRC.xcodeproj/: project.pbxproj
app/PicoRC/Assets.xcassets/AppIcon.appiconset/: Contents.json
app/PicoRC/Bluetooth/: BluetoothStreamModel.swift  PicoRCBluetoothProfile.swift  TelemetryPacketParser.swift
app/PicoRC/Models/: AppSettings.swift  LiveActivityController.swift  PicoRCLog.swift  TelemetryState.swift
app/PicoRC/Views/: StatusBar.swift
app/PicoRC/Views/Log/: LogView.swift
app/PicoRC/Views/System/: SystemView.swift
app/PicoRC/Views/Tank/: DrivePanel.swift  TankControlPanel.swift  TankView.swift  TurretPanel.swift
app/PicoRCWidget/: Info.plist  PicoRCWidgetBundle.swift
app/Shared/: PicoRCLiveActivityAttributes.swift
schematics/Tank/: Tank.kicad_prl  Tank.kicad_pro  Tank.kicad_sch
tank/: README.md
tank/src/: .clang-format  CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  btstack_config.h  hooks.c  hooks.h  main.c  rc_platform.c  sdkconfig.h  shared_config.h  state.c  state.h
tank/src/control/: actuation.c  actuation.h  input.c  input.h
tank/src/defines/: config.h
tank/src/modules/app_bt/: app_bt.c  app_bt.h  picorc_bt_service.gatt  picorc_bt_service.gatt.h
tank/src/modules/engine/: engine.c  engine.h  main_engine.c  main_engine.h  turret_ctrl.c  turret_ctrl.h
tank/src/modules/leds/: leds.c  leds.h
tank/src/modules/log_sink/: log_sink.c
tank/src/storage/: app_lfs.c  app_lfs.h  app_storage.c  app_storage.h
tank/src/tasks/: control_actuation.c  control_input.c  debug.c  heartbeat.c  startup.c  system_monitor.c  tasks.c  tasks.h
